# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml
backend/: TEST_RESULTS.md  ai_generator.py  app.py  backend-tool-refactor.md  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: frontend-changes.md  index.html  script.js  style.css
scripts/: check.sh  fix.sh  format.sh  lint.sh  type-check.sh
