[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["backend/tests"]
pythonpath = "backend"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (may require real dependencies)",
    "unit: marks tests as unit tests (isolated, mocked)",
    "slow: marks tests as slow (may require network or heavy computation)",
    "api: marks tests as API endpoint tests",
]
log_cli_level = "INFO"
